--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -3,6 +3,7 @@
     --color-primary: #2f6083;
     --color-primary-light: #2b5777;
     --color-primary-dark: #264e6a;
+    --color-secondary: #444;
 
 
     
