--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -14,7 +14,7 @@
 .section-main {
     height: 85vh;
     width: auto;
-    background-image: linear-gradient( to bottom right, rgba(47, 96, 131, 0.75), rgba(43, 88, 120, 0.75)), url(../img/lu1187490788-GH9fV3tHvfY-unsplash.jpg);
+    background-image: linear-gradient( to bottom right, rgba(47, 96, 131, 0.75), rgba(43, 88, 120, 0.75)), url(../img/bullet-train-main.jpg);
     background-size: cover;
     
 
