--- a/css/style.css
+++ b/css/style.css
@@ -68,7 +68,7 @@ body {
 .section-main {
   height: 85vh;
   width: auto;
-  background-image: linear-gradient(to bottom right, rgba(47, 96, 131, 0.75), rgba(43, 88, 120, 0.75)), url(../img/lu1187490788-GH9fV3tHvfY-unsplash.jpg);
+  background-image: linear-gradient(to bottom right, rgba(47, 96, 131, 0.75), rgba(43, 88, 120, 0.75)), url(../img/bullet-train-main.jpg);
   background-size: cover; }
 
 .section-features {
@@ -187,7 +187,7 @@ h1 {
 
 .features-showcase__description {
   font-size: 2.5rem;
-  font-weight: 100;
+  font-weight: 300;
   word-spacing: .2rem;
   letter-spacing: .1rem; }
 
@@ -198,4 +198,7 @@ p {
 
 .gallery__img--1 {
   width: 100%;
-  height: auto; }
+  height: auto;
+  display: flex;
+  align-items: stretch;
+  max-height: 18rem; }
