adjusted images to be similar size.

--- a/css/style.css
+++ b/css/style.css
@@ -200,5 +200,4 @@ p {
   width: 100%;
   height: auto;
   display: flex;
-  align-items: stretch;
-  max-height: 18rem; }
+  align-items: stretch; }
