--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -46,3 +46,15 @@
     grid-template-columns: repeat(3, 1fr);
 }
 
+.section-departures {
+    background-color: var(--color-grey-light-1);
+}
+
+.departures__container {
+    max-width: 100rem;
+    margin: 0 auto;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 10rem;
+
+}
