--- a/css/style.css
+++ b/css/style.css
@@ -93,14 +93,17 @@ body {
   grid-template-columns: repeat(3, 1fr); }
 
 .section-departures {
-  background-color: var(--color-grey-light-1); }
+  background-color: var(--color-grey-light-1);
+  padding-bottom: 8rem; }
 
 .departures__container {
   max-width: 100rem;
   margin: 0 auto;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  grid-gap: 10rem; }
+  grid-gap: 10rem;
+  margin: 5rem auto;
+  padding: 0 3rem; }
 
 header {
   position: relative;
@@ -139,6 +142,33 @@ header {
 h1 {
   text-transform: uppercase;
   color: var(--color-grey-light-2); }
+
+.btn,
+.btn:link,
+.btn:visited {
+  font-size: 1.6rem;
+  padding: 1.2rem 2.25rem;
+  border-radius: 10rem;
+  text-transform: uppercase;
+  display: inline-block;
+  text-decoration: none;
+  position: relative;
+  font-weight: 400;
+  border: none;
+  cursor: pointer;
+  transition: all 0.4s; }
+
+.btn:hover {
+  transform: translateY(-3px);
+  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15); }
+
+.btn:active {
+  transform: translateY(-1px);
+  box-shadow: 0 0.25rem 0.5rem rgba(0, 0, 0, 0.15); }
+
+.btn:focus {
+  outline: none;
+  background-color: var(--color-primary-dark); }
 
 .heading-primary--main {
   display: block;
@@ -211,3 +241,88 @@ p {
   height: auto;
   display: flex;
   align-items: stretch; }
+
+.card {
+  border-radius: 5px;
+  box-shadow: 0 1.5rem 3.5rem rgba(0, 0, 0, 0.1);
+  display: flex;
+  flex-direction: column; }
+  .card__header {
+    position: relative; }
+  .card__main-heading {
+    color: #fff;
+    font-weight: 300;
+    font-size: 2.75rem;
+    position: absolute;
+    bottom: 1rem;
+    right: 2rem;
+    width: 70%;
+    z-index: 10;
+    text-align: right; }
+    .card__main-heading span {
+      padding: 1rem 1.5rem;
+      line-height: 1;
+      box-decoration-break: clone;
+      background-image: linear-gradient(to bottom right, rgba(47, 96, 131, 0.8), rgba(43, 88, 120, 0.8)); }
+  .card__img {
+    position: relative;
+    height: 22rem; }
+    .card__img-overlay {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      background-image: linear-gradient(to bottom right, rgba(47, 96, 131, 0.7), rgba(43, 88, 120, 0.7)); }
+    .card__img-picture {
+      object-fit: cover;
+      height: 100%;
+      width: 100%; }
+  .card__details {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-row-gap: 1.5rem;
+    grid-column-gap: 1.75rem;
+    padding: 2.25rem 3rem; }
+  .card__sub-heading {
+    font-size: 1.6rem;
+    text-transform: uppercase;
+    font-weight: 700;
+    grid-column: 1 / -1;
+    word-spacing: 1px; }
+  .card__text {
+    grid-column: 1 / -1;
+    font-size: 1.4rem;
+    margin: .5rem 0; }
+  .card__data {
+    font-size: 1.2rem;
+    display: flex;
+    align-items: center; }
+    .card__data svg {
+      margin-right: 0.7rem; }
+  .card__icon {
+    height: 2rem;
+    width: 2rem;
+    fill: var(--color-primary); }
+  .card__footer {
+    padding: 2rem 3rem;
+    background-color: var(--color-grey-light-2);
+    border-top: 1px solid var(--color-grey-light-3);
+    display: grid;
+    grid-template-columns: auto 1fr;
+    grid-column-gap: 1rem;
+    grid-row-gap: 1rem;
+    margin-top: auto; }
+    .card__footer-value {
+      font-weight: 700; }
+    .card__footer-text {
+      color: var(--color-grey-dark-3); }
+  .card__ratings {
+    grid-row: 2 / 3; }
+
+.btn--details {
+  grid-row: 1 / 3;
+  justify-self: end;
+  align-self: center;
+  background-color: var(--color-primary);
+  color: #fff; }
+  .btn--details:after {
+    background-color: var(--color-primary); }
