--- a/sass/_component.scss
+++ b/sass/_component.scss
@@ -54,7 +54,42 @@ h1 {
     text-transform: uppercase;
     color: var(--color-grey-light-2);
 }
+.btn,
+.btn:link,
+.btn:visited {
+    font-size: 1.6rem;
+    padding: 1.2rem 2.25rem;
+    border-radius: 10rem;
+    text-transform: uppercase;
+    display: inline-block;
+    text-decoration: none;
+    position: relative;
+    font-weight: 400;
+    border: none;
+    cursor: pointer;
+    transition: all 0.4s;
 
+}
+
+.btn {
+
+    &:hover {
+        transform: translateY(-3px);
+        box-shadow: 0 .5rem 1rem rgba(0, 0, 0, 0.15);
+    }
+
+    &:active {
+        transform: translateY(-1px);
+        box-shadow: 0 .25rem .5rem rgba(0, 0, 0, 0.15);
+
+    }
+
+    &:focus {
+        outline: none;
+        background-color: var(--color-primary-dark);
+    }
+ 
+}
 .heading-primary {
 
     &--main {
@@ -158,4 +193,131 @@ p {
 /////////////////////////////////////
 /////////SECTION DEPARTURES
 
+.card {
+    border-radius: 5px;
+    box-shadow: 0 1.5rem 3.5rem rgba(0,0,0,0.1);
+    display: flex;
+    flex-direction: column;
 
+    &__header {
+        position: relative;
+    }
+
+    &__main-heading {
+        color: #fff;;
+        font-weight: 300;
+        font-size: 2.75rem;
+        position: absolute;
+        bottom: 1rem;
+        right: 2rem;
+        width: 70%;
+        z-index: 10;
+        text-align: right;
+
+        & span {
+            padding: 1rem 1.5rem;
+            line-height: 1;
+            box-decoration-break: clone;
+            background-image: linear-gradient( to bottom right,rgba(47, 96, 131, 0.80), rgba(43, 88, 120, 0.80));
+        }
+    }
+
+    &__img {
+        position: relative;
+        height: 22rem;
+
+        &-overlay {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            background-image: linear-gradient( to bottom right,rgba(47, 96, 131, 0.7), rgba(43, 88, 120, 0.7));
+        }
+
+        &-picture {
+            object-fit: cover;
+            height: 100%;
+            width: 100%;
+        }
+    }
+
+    &__details {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-row-gap: 1.5rem;
+        grid-column-gap:1.75rem;
+        padding: 2.25rem 3rem;
+    }
+
+    &__sub-heading {
+        font-size: 1.6rem;
+        text-transform: uppercase;
+        font-weight: 700;
+        grid-column: 1 / -1;
+        word-spacing: 1px;
+    }
+
+    &__text {
+        grid-column: 1 / -1;
+        font-size: 1.4rem;
+        margin: .5rem 0;
+    }
+
+    &__data {
+        font-size: 1.2rem;
+        display: flex;
+        align-items: center;
+
+        & svg {
+            margin-right: 0.7rem;
+        }
+    }
+
+    &__icon {
+        height: 2rem;
+        width: 2rem;
+        fill: var(--color-primary);
+    }
+
+
+    &__footer {
+        padding: 2rem 3rem;
+        background-color: var(--color-grey-light-2);
+        border-top: 1px solid var(--color-grey-light-3);
+        display: grid;
+        grid-template-columns: auto 1fr;
+        grid-column-gap: 1rem;
+        grid-row-gap: 1rem;
+        margin-top: auto;
+
+        &-value {
+            font-weight: 700;
+        }
+
+        &-text {
+            color: var(--color-grey-dark-3);
+        }
+    }
+
+    &__ratings {
+        grid-row: 2 / 3;
+    }
+
+}
+
+.btn--details {
+    grid-row: 1 / 3;
+    justify-self: end;
+    align-self: center;
+    background-color: var(--color-primary);
+    color:#fff;
+
+    &:after {
+        background-color: var(--color-primary);
+    }
+}
+
+
+//////// END OF MAIN PAGE ///////////
+
+/////////////////////////////////////
+/////// SINGLE DEPARTURES PAGE
