--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -48,6 +48,7 @@
 
 .section-departures {
     background-color: var(--color-grey-light-1);
+    padding-bottom: 8rem;
 }
 
 .departures__container {
@@ -56,5 +57,6 @@
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-gap: 10rem;
-
+    margin: 5rem auto;
+    padding: 0 3rem;
 }
