--- a/css/style.css
+++ b/css/style.css
@@ -105,7 +105,13 @@ body {
   margin: 5rem auto;
   padding: 0 3rem; }
 
-header {
+.section-header {
+  height: 50vh;
+  width: auto;
+  background-image: linear-gradient(to bottom right, rgba(47, 96, 131, 0.75), rgba(43, 88, 120, 0.75)), url(../img/houston.jpg);
+  background-size: cover; }
+
+.header {
   position: relative;
   background-color: var(--color-secondary); }
 
@@ -326,3 +332,20 @@ p {
   color: #fff; }
   .btn--details:after {
     background-color: var(--color-primary); }
+
+.departure-heading {
+  font-size: 4rem;
+  word-spacing: 3px;
+  letter-spacing: 2px; }
+  .departure-heading span {
+    padding: 1rem 1.5rem;
+    line-height: 1;
+    box-decoration-break: clone;
+    background-image: linear-gradient(to bottom right, rgba(47, 96, 131, 0.8), rgba(43, 88, 120, 0.8)); }
+
+.heading-box {
+  position: absolute;
+  top: 30%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center; }
