--- a/css/style.css
+++ b/css/style.css
@@ -123,6 +123,18 @@ body {
   column-gap: 3rem;
   max-width: 100rem; }
 
+.section-reviews {
+  padding: 6rem 4rem;
+  background-color: var(--color-grey-light-1); }
+
+.reviews {
+  padding: 5rem 0;
+  display: grid;
+  grid-column-gap: 6rem;
+  grid-auto-flow: column;
+  overflow-x: scroll;
+  scroll-snap-type: x mandatory; }
+
 .header {
   position: relative;
   background-color: var(--color-secondary); }
@@ -344,7 +356,7 @@ p {
     background-color: var(--color-primary); }
 
 .departure-heading {
-  font-size: 4rem;
+  font-size: 3.5rem;
   word-spacing: 3px;
   letter-spacing: 2px; }
   .departure-heading span {
@@ -376,7 +388,8 @@ p {
 .info-box__label {
   font-size: 1.6rem;
   font-weight: 700;
-  word-spacing: 1px; }
+  word-spacing: 1px;
+  margin-right: .5rem; }
 
 .info-box__text {
   font-size: 1.6rem;
@@ -384,3 +397,51 @@ p {
 
 .info-box__description {
   font-size: 1.2rem; }
+
+.reviews:before, .reviews:after {
+  content: '';
+  width: 2rem; }
+
+.reviews__card {
+  width: 30rem;
+  padding: 4rem;
+  background: #fff;
+  border-radius: 3px;
+  box-shadow: 0 0.75rem 2rem rgba(0, 0, 0, 0.15);
+  scroll-snap-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center; }
+
+.reviews__avatar {
+  display: flex;
+  align-items: center;
+  margin-bottom: 2rem; }
+  .reviews__avatar-img {
+    height: 4.5rem;
+    border-radius: 50%;
+    margin-right: 1.5rem; }
+
+.reviews__user {
+  font-size: 1.5rem;
+  font-weight: 700;
+  text-transform: uppercase; }
+
+.reviews__text {
+  font-size: 1.5rem;
+  margin-bottom: 2rem;
+  font-weight: 400;
+  font-style: italic; }
+
+.reviews__rating {
+  margin-top: auto;
+  display: flex; }
+
+.reviews__star {
+  height: 2rem;
+  width: 2rem;
+  margin-right: 1px; }
+  .reviews__star--active {
+    fill: var(--color-primary); }
+  .reviews__star--inactive {
+    fill: var(--color-grey-dark-4); }
