--- a/sass/_component.scss
+++ b/sass/_component.scss
@@ -368,6 +368,7 @@ p {
         font-size: 1.6rem;
         font-weight: 700;
         word-spacing: 1px;
+        margin-right: .5rem;
     }
 
     &__text {
@@ -382,3 +383,68 @@ p {
 
 /////////////////////////////////////
 /////////SECTION REVIEWS
+
+.reviews {
+
+    &:before,
+    &:after {
+        content: '';
+        width: 2rem;
+    }
+    
+    &__card {
+        width: 30rem;
+        padding: 4rem;
+        background: #fff;
+        border-radius: 3px;
+        box-shadow: 0 .75rem 2rem rgba(0, 0, 0, 0.15);
+        scroll-snap-align: center;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    &__avatar {
+        display: flex;
+        align-items: center;
+        margin-bottom: 2rem;
+
+        &-img {
+            height: 4.5rem;
+            border-radius: 50%;
+            margin-right: 1.5rem;
+        }
+    }
+
+    &__user {
+        font-size: 1.5rem;
+        font-weight: 700;
+        text-transform: uppercase;
+    }
+
+    &__text {
+        font-size: 1.5rem;
+        margin-bottom: 2rem;
+        font-weight: 400;
+        font-style: italic;
+    }
+
+    &__rating {
+        margin-top: auto;
+        display: flex;
+    }
+
+    &__star {
+        height: 2rem;
+        width: 2rem;
+        margin-right: 1px;
+
+        &--active {
+            fill: var(--color-primary);
+        }
+
+        &--inactive {
+            fill: var(--color-grey-dark-4)
+        }
+    }
+}
