--- a/css/style.css
+++ b/css/style.css
@@ -105,6 +105,15 @@ body {
   margin: 5rem auto;
   padding: 0 3rem; }
 
+.footer {
+  background-color: var(--color-grey-light-1);
+  padding: 6rem 4rem 3rem 4rem;
+  font-size: 1.4rem;
+  display: grid;
+  grid-template-columns: auto auto;
+  grid-row-gap: 0.75rem;
+  justify-content: space-between; }
+
 .section-header {
   height: 50vh;
   width: auto;
@@ -355,10 +364,43 @@ p {
   .btn--details:after {
     background-color: var(--color-primary); }
 
+.footer__logo {
+  grid-row: 1/ 3;
+  align-self: center; }
+  .footer__logo-img {
+    height: 5rem;
+    width: 5rem; }
+
+.footer__nav {
+  list-style: none;
+  display: flex; }
+  .footer__nav li {
+    margin-left: 1.5rem; }
+  .footer__nav a {
+    color: var(--color-grey-dark-3);
+    text-decoration: none !important; }
+    .footer__nav a:hover, .footer__nav a:active {
+      color: var(--color-primary); }
+
+.footer__copyright {
+  justify-self: end;
+  color: var(--color-grey-dark-3); }
+
+.btn--bookNow {
+  background-color: #fff;
+  color: var(--color-grey-dark-1);
+  word-spacing: 3px;
+  letter-spacing: 1px; }
+  .btn--bookNow:focus {
+    background-color: var(--color-grey-light-3); }
+  .btn--bookNow:after {
+    background-color: #fff; }
+
 .departure-heading {
   font-size: 3.5rem;
   word-spacing: 3px;
-  letter-spacing: 2px; }
+  letter-spacing: 2px;
+  margin-bottom: 5rem; }
   .departure-heading span {
     padding: 1rem 1.5rem;
     line-height: 1;
