--- a/sass/_component.scss
+++ b/sass/_component.scss
@@ -313,6 +313,44 @@ p {
     }
 }
 
+/////////////////////////////////////
+/////////FOOTER
+.footer {
+    &__logo {
+        grid-row: 1/ 3;
+        align-self: center;
+
+        &-img {
+            height: 5rem;
+            width: 5rem;
+        }
+    }
+
+    &__nav {
+        list-style: none;
+        display: flex;
+
+        & li {
+            margin-left: 1.5rem;
+        }
+
+        & a {
+            color: var(--color-grey-dark-3);
+            text-decoration: none !important;
+
+            &:hover,
+            &:active {
+                color: var(--color-primary)
+            }
+        }
+    }
+
+    &__copyright {
+        justify-self: end;
+        color: var(--color-grey-dark-3);
+    }
+}
+
 
 //////// END OF MAIN PAGE ///////////
 
@@ -322,11 +360,25 @@ p {
 
 /////////////////////////////////////
 /////////SECTION HEADING
+.btn--bookNow {
+    background-color: #fff;
+    color: var(--color-grey-dark-1);
+    word-spacing: 3px;
+    letter-spacing: 1px;
 
+    &:focus {
+        background-color: var(--color-grey-light-3)
+    }
+
+    &:after {
+        background-color: #fff;
+    }
+}
 .departure-heading {
     font-size: 3.5rem;
     word-spacing: 3px;
     letter-spacing: 2px;
+    margin-bottom: 5rem;
 
     & span {
         padding: 1rem 1.5rem;
