--- a/sass/_component.scss
+++ b/sass/_component.scss
@@ -500,3 +500,67 @@ p {
         }
     }
 }
+
+/////////////////////////////////////
+/////////LOGIN FORM
+
+.btn--logIn {
+    margin-right: 7rem;
+}
+.form__heading {
+    font-size: 2.25rem;
+    text-transform: uppercase;
+    font-weight: 700;
+    letter-spacing: 1px;
+    color: var(--color-primary);
+    margin-bottom: 3rem;
+
+}
+
+.form{
+    &__group {
+        &:not(:last-child) {
+            margin-bottom: 2rem;
+        }
+    }
+
+    &__label {
+        display: block;
+        font-size: 1.6rem;
+        font-weight: 700;
+        margin-bottom: .76rem;
+    }
+
+    &__input {
+        display: block;
+        font-family: inherit;
+        font-size: 1.5rem;
+        color: inherit;
+        padding: 1.25rem 1.75rem;
+        border: none;
+        width: 100%;
+        background-color: #fff;
+        border-top: 3px solid transparent;
+        border-bottom: 3px solid transparent;
+        transition: all 0.3s;
+        border-radius: 5px;
+        box-sizing: border-box;
+
+        &:focus {
+            outline: none;
+            border-bottom: 3px solid var(--color-primary-light);
+
+            &:invalid {
+                border-bottom: 3px solid #ff5930;
+            }
+        }
+    }
+
+    &__link {
+        font-size: 1.4rem;
+    }
+}
+
+.forgotPass-form__text {
+    margin-bottom: .75rem;
+}
