--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -115,3 +115,22 @@
     overflow-x: scroll;
     scroll-snap-type: x mandatory;
 }
+
+/////////////////////////////////////////
+// FORMS LOGIN /SIGNUP /FORGOTPASSWOD ///
+/////////////////////////////////////////
+
+.main {
+    background-color:  var(--color-grey-light-1);
+    padding: 8rem 6rem;
+    height: 73vh;
+}
+
+.form-box {
+    margin: 4.5rem auto 0 auto;
+    max-width: 45rem;
+    background-color: #fff;
+    box-shadow: 0 2.5rem 8rem 2rem rgba(0, 0, 0, 0.06);
+    padding: 4rem 7rem;
+    border-radius: 5px;
+}
